--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <main>
     <h2>Contact</h2>
     <p>For questions, support, or partnership inquiries, please contact us at:</p>
-    <p><strong>Email:</strong> <a href="mailto:e3-core@outlook.com">e3-core@outlook.com</a></p>
+    <p><strong>Email:</strong> <a href="mailto:e3-core@outlook.com">e3.kevinm@gmail.com</a></p>
   </main>
   <footer>
     <p>&copy; 2025 Ellipe3 & E3-Core Blockchain</p>
